# Proch

./: .cproject  .project  CMakeLists.txt  README.md  categorytree.cpp  categorytree.h  categorywindow.cpp  categorywindow.h  index.html  mainwindow.cpp  mainwindow.h  productsWindow.cpp  productsWindow.h  tabsystem.cpp  tabsystem.h
Data/: categories.db
ProchApp/: CMakeLists.txt  categories.ui  categorytree.cpp  categorytree.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  products.cpp  products.h
Themes/: DefaultDark.qss
css/: items.css
src/: proch.cpp
